--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   bottom_bar_matu: ^1.3.0
+  pie_chart: ^5.3.2
+  animated_pie_chart: ^0.0.2
+  awesome_circular_chart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
